--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DZ 130622</title>
+  <title>To DO List</title>
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-  <h1>DZ 130622</h1>
+  <h1>To DO List</h1>
+  <p class="warning"> Прога работает до обновления страницы. Как только страница обновлена, все данные теряются</p>
   <div class="wrapper">
-    <h3>ToDo list</h3>
+    <h3>Введите запланированную задачу!</h3>
     <div class="todoinpblock">
       <input type="text" class="todoinp">
       <button class="todoinpbtn">Добавить задачу</button>
@@ -20,9 +21,6 @@
       <div class="todoitem" ondrop="drop(event)" ondragover="allowDrop(event)">
         <div class="todotext">
           <p>Задачи отсутствуют!</p>
-        </div>
-        <div class="todopanel">
-          <button class="todobtn">Del</button>
         </div>
       </div>
     </div>
