--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="firstitem">
       <div class="todoitem" ondrop="drop(event)" ondragover="allowDrop(event)">
         <div class="todotext">
-          <p>Задачи отсутствуют!</p>
+          <p class="ftext">Задачи отсутствуют!</p>
         </div>
       </div>
     </div>
